[package]
name = "dutawalletd"
version = "1.0.1"
edition = "2021"
license = "MIT"
authors = ["dutago"]
description = "DUTA wallet daemon with encrypted storage and wallet RPC."
homepage = "https://dutago.xyz"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
duta-core = { path = "../dutad/core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["std"] }
bip39 = { version = "2", features = ["rand"] }

# W1 wallet modern (encrypt-at-rest + sqlite + secrets hygiene)
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
secrecy = "0.8"
zeroize = "1"
base64ct = { version = "1", features = ["std"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
ctrlc = "3"
signal-hook = "0.3"

[workspace]
